--- a/docs/notebooks/Orr Somerfeld pseudospectra.ipynb
+++ b/docs/notebooks/Orr Somerfeld pseudospectra.ipynb
@@ -26,11 +26,11 @@
     "\n",
     "This is a very interesting problem because the linear operator for the Orr-Sommerfeld problem $\\mathcal{L}_{OS}$ is non-normal, that is $\\mathcal{L}_{OS}^\\dagger \\mathcal{L}_{OS} \\neq \\mathcal{L}_{OS}\\mathcal{L}_{OS}^\\dagger$. Non-normal operators can drive transient growth: even systems in which *all* eigenmodes are linearly stable and will decay to zero, arbitrary initial conditions can be amplified by large factors.\n",
     "\n",
-    "Here, we assume perturbations take the form $u(x,z,t) = \\hat{u} e^{i\\alpha (x - ct)}$, where $c = \\omega/\\alpha$ is the wave speed. One must take care to note that $c = c_r + i c_i$. If a perturbation has $c_i > 0$, it will linearly grow. This occurs at a Reynolds number $\\mathrm{Re} \\simeq 5772$, a result you can also find using `CriticalFinder` (it's actually a test problem for `eigentools`).\n",
+    "Here, we assume perturbations take the form $u(x,z,t) = \\hat{u} e^{i\\alpha (x - ct)}$, where $c = \\omega/\\alpha$ is the wave speed. One must take care to note that $c = c_r + i c_i$. If a perturbation has $c_i > 0$, it will grow exponentially. This occurs at Reynolds number $\\mathrm{Re} \\simeq 5772$, a result you can also find using `CriticalFinder` (it's actually a test problem for `eigentools`).\n",
     "\n",
     "However, as we will see below, even at $\\mathrm{Re} = 10000$, the growth rate is tiny: $c_i \\approx 3.7\\times10^{-3}$! Yet at those Reynolds numbers, channel flow is clearly unstable. How can this be?\n",
     "\n",
-    "The answer is that the *spectrum* of the Orr-Sommerfeld operator is quite misleading. Because $\\mathcal{L}_{OS}$ is non-normal, its eigenfuntions are not orthogonal. As they decay at different rates, the total amplitude of some arbitrary initial condition can **increase**!\n",
+    "The answer is that the *spectrum* of the Orr-Sommerfeld operator is quite misleading. Because the linear operator $\\mathcal{L}_{OS}$ is non-normal, its eigenfuntions are not orthogonal. As they decay at different rates, the total amplitude of some arbitrary initial condition can **increase**!\n",
     "\n",
     "This observation was first noted in the pioneering paper by [Reddy, Schmid, and Henningson (1993)](https://www.jstor.org/stable/2102271?seq=1). For a detailed discussion of the Orr-Sommerfeld problem including a thorough discussion of transient growth, see [Schmid and Henningson (2001)](https://link.springer.com/book/10.1007/978-1-4613-0185-1)."
    ]
@@ -80,16 +80,16 @@
     "alpha = 1.\n",
     "Re = 10000\n",
     "\n",
-    "orr_somerfeld = de.EVP(d,['w','wz','wzz','wzzz'],'c')\n",
+    "orr_somerfeld = de.EVP(d,['w', 'wz', 'wzz', 'wzzz'], 'c')\n",
     "orr_somerfeld.parameters['alpha'] = alpha\n",
     "orr_somerfeld.parameters['Re'] = Re\n",
     "orr_somerfeld.substitutions['umean']= '1 - z**2'\n",
     "orr_somerfeld.substitutions['umeanzz']= '-2'\n",
     "\n",
     "orr_somerfeld.add_equation('dz(wzzz) - 2*alpha**2*wzz + alpha**4*w -1j*alpha*Re*((umean-c)*(wzz - alpha**2*w) - umeanzz*w) = 0')\n",
-    "orr_somerfeld.add_equation('dz(w)-wz = 0')\n",
-    "orr_somerfeld.add_equation('dz(wz)-wzz = 0')\n",
-    "orr_somerfeld.add_equation('dz(wzz)-wzzz = 0')\n",
+    "orr_somerfeld.add_equation('dz(w) - wz = 0')\n",
+    "orr_somerfeld.add_equation('dz(wz) - wzz = 0')\n",
+    "orr_somerfeld.add_equation('dz(wzz) - wzzz = 0')\n",
     "\n",
     "orr_somerfeld.add_bc('left(w) = 0')\n",
     "orr_somerfeld.add_bc('right(w) = 0')\n",
@@ -199,11 +199,11 @@
     }
    ],
    "source": [
-    "plt.scatter(EP.evalues.real, EP.evalues.imag,color='red')\n",
+    "plt.scatter(EP.evalues.real, EP.evalues.imag, color='red')\n",
     "plt.axis('square')\n",
-    "plt.axhline(0,color='k',alpha=0.2)\n",
-    "plt.xlim(0,1)\n",
-    "plt.ylim(-1,0.1)\n",
+    "plt.axhline(0, color='k', alpha=0.2)\n",
+    "plt.xlim(0, 1)\n",
+    "plt.ylim(-1, 0.1)\n",
     "plt.xlabel(r\"$c_r$\")\n",
     "plt.ylabel(r\"$c_i$\")"
    ]
@@ -250,8 +250,8 @@
     "k = 100\n",
     "\n",
     "psize = 100\n",
-    "real_points = np.linspace(0,1, psize)\n",
-    "imag_points = np.linspace(-1,0.1, psize)"
+    "real_points = np.linspace(0, 1, psize)\n",
+    "imag_points = np.linspace(-1, 0.1, psize)"
    ]
   },
   {
@@ -265,7 +265,7 @@
     "\n",
     "Here, we will use the energy inner product for the Orr-Sommerfeld form of the equations,\n",
     "\n",
-    "$$<\\mathbf{X}_1|\\mathbf{X}_2>_E = \\int_{-1}^{1} w_1^\\dagger w_2 + \\frac{(\\partial_z w_1)^\\dagger \\partial_z w_2}{\\alpha^2} dz,$$\n",
+    "$$\\langle\\mathbf{X}_1|\\mathbf{X}_2\\rangle_E = \\int_{-1}^{1} w_1^\\dagger w_2 + \\frac{(\\partial_z w_1)^\\dagger \\partial_z w_2}{\\alpha^2} dz,$$\n",
     "\n",
     "with $\\mathbf{X}_{1,2}$ state vectors containing $w$ and its first three derivatives. This inner product induces a norm $||\\mathbf{X}||_E$ that is equal to the energy of the perturbation.\n",
     "\n",
@@ -280,9 +280,9 @@
    "outputs": [],
    "source": [
     "def energy_norm(X1, X2):\n",
-    "    u1 = X1['wz']/alpha\n",
+    "    u1 = X1['wz'] / alpha\n",
     "    w1 = X1['w']\n",
-    "    u2 = X2['wz']/alpha\n",
+    "    u2 = X2['wz'] / alpha\n",
     "    w2 = X2['w']\n",
     "    \n",
     "    field = (np.conj(u1)*u2 + np.conj(w1)*w2).evaluate().integrate()\n",
@@ -347,13 +347,13 @@
     }
    ],
    "source": [
-    "plt.scatter(EP.evalues.real, EP.evalues.imag,color='red')\n",
-    "plt.contour(EP.ps_real,EP.ps_imag, np.log10(EP.pseudospectrum),levels=np.arange(-8,0),colors='k')\n",
+    "plt.scatter(EP.evalues.real, EP.evalues.imag, color='red')\n",
+    "plt.contour(EP.ps_real,EP.ps_imag, np.log10(EP.pseudospectrum), levels=np.arange(-8, 0), colors='k')\n",
     "plt.axis('square')\n",
-    "plt.axhline(0,color='k',alpha=0.2)\n",
+    "plt.axhline(0, color='k', alpha=0.2)\n",
     "\n",
-    "plt.xlim(0,1)\n",
-    "plt.ylim(-1,0.1)\n",
+    "plt.xlim(0, 1)\n",
+    "plt.ylim(-1, 0.1)\n",
     "plt.xlabel(r\"$c_r$\")\n",
     "plt.ylabel(r\"$c_i$\")"
    ]
@@ -432,7 +432,7 @@
     "\n",
     "However, the energy norm in primitive variables is slightly different:\n",
     "\n",
-    "$$<\\mathbf{X}_1|\\mathbf{X}_2>_E = \\int_{-1}^{1} u_1^\\dagger u_2 + w_1^\\dagger w_2 dz,$$\n",
+    "$$\\langle\\mathbf{X}_1|\\mathbf{X}_2\\rangle_E = \\int_{-1}^{1} u_1^\\dagger u_2 + w_1^\\dagger w_2 dz,$$\n",
     "\n",
     "so we write another `energy_norm` function and then call `prim_EP.calc_ps` with the same arguments as before."
    ]
@@ -492,20 +492,20 @@
     }
    ],
    "source": [
-    "clevels = np.arange(-8,0)\n",
-    "OS_CS = plt.contour(EP.ps_real,EP.ps_imag, np.log10(EP.pseudospectrum),levels=clevels,colors='blue',linestyles='solid', alpha=0.5)\n",
-    "P_CS = plt.contour(prim_EP.ps_real,prim_EP.ps_imag, np.log10(prim_EP.pseudospectrum),levels=clevels,colors='red',linestyles='solid', alpha=0.5)\n",
+    "clevels = np.arange(-8, 0)\n",
+    "OS_CS = plt.contour(EP.ps_real, EP.ps_imag, np.log10(EP.pseudospectrum), levels=clevels, colors='blue', linestyles='solid', alpha=0.5)\n",
+    "P_CS = plt.contour(prim_EP.ps_real, prim_EP.ps_imag, np.log10(prim_EP.pseudospectrum), levels=clevels, colors='red', linestyles='solid', alpha=0.5)\n",
     "\n",
-    "plt.scatter(prim_EP.evalues.real, prim_EP.evalues.imag,color='red',zorder=3)\n",
-    "plt.scatter(EP.evalues.real, EP.evalues.imag,color='blue',marker='x',zorder=4)\n",
+    "plt.scatter(prim_EP.evalues.real, prim_EP.evalues.imag, color='red', zorder=3)\n",
+    "plt.scatter(EP.evalues.real, EP.evalues.imag, color='blue', marker='x',zorder=4)\n",
     "\n",
-    "lines = [OS_CS.collections[0],P_CS.collections[0]]\n",
+    "lines = [OS_CS.collections[0], P_CS.collections[0]]\n",
     "labels = ['O-S form', 'primitive form']\n",
     "\n",
     "plt.axis('square')\n",
-    "plt.xlim(0,1)\n",
-    "plt.ylim(-1,0.1)\n",
-    "plt.axhline(0,color='k',alpha=0.2)\n",
+    "plt.xlim(0, 1)\n",
+    "plt.ylim(-1, 0.1)\n",
+    "plt.axhline(0, color='k', alpha=0.2)\n",
     "plt.xlabel(r\"$c_r$\")\n",
     "plt.ylabel(r\"$c_i$\")\n",
     "plt.legend(lines, labels)\n",
