spaces after commas

--- a/docs/notebooks/Mixed Layer Instability.ipynb
+++ b/docs/notebooks/Mixed Layer Instability.ipynb
@@ -64,10 +64,10 @@
    ],
    "source": [
     "# Only need the z direction to compute eigenvalues\n",
-    "z = de.Chebyshev('z',nz, interval=[-1,0])\n",
+    "z = de.Chebyshev('z', nz, interval=[-1, 0])\n",
     "d = de.Domain([z], grid_dtype=np.complex128)\n",
     "\n",
-    "evp = de.EVP(d, ['u','v','w','p','b'],'sigma')\n",
+    "evp = de.EVP(d, ['u', 'v', 'w', 'p', 'b'], 'sigma')\n",
     "\n",
     "evp.parameters['Ri'] = Ri\n",
     "evp.parameters['δ'] = δ\n",
@@ -101,7 +101,7 @@
     "\n",
     "In this problem the time dependence is given by\n",
     "\n",
-    "$$e^{i \\sigma t},$$\n",
+    "$$e^{i \\sigma t}$$,\n",
     "\n",
     "so the growth rate is $-Im(\\sigma)$ and the frequency is $Re(\\sigma)$."
    ]
@@ -146,7 +146,7 @@
     }
    ],
    "source": [
-    "rate, indx, freq = EP.growth_rate(parameters={'Hy':Hy, 'kx': kx}, sparse=False)\n",
+    "rate, indx, freq = EP.growth_rate(parameters={'Hy' :Hy, 'kx': kx}, sparse=False)\n",
     "print(\"fastest growing mode: {} @ freq {}\".format(rate, freq))"
    ]
   },
@@ -209,8 +209,8 @@
    "outputs": [],
    "source": [
     "# define a 2D domain to plot the eigenmode\n",
-    "x = de.Fourier('x',nx)\n",
-    "d_2d = de.Domain([x,z], grid_dtype=np.float64)"
+    "x = de.Fourier('x', nx)\n",
+    "d_2d = de.Domain([x, z], grid_dtype=np.float64)"
    ]
   },
   {
@@ -272,30 +272,30 @@
     "mfig = plot_tools.MultiFigure(nrows, ncols, image, pad, margin, scale)\n",
     "fig = mfig.figure\n",
     "\n",
-    "for var in ['b','u','v','w','p']:\n",
+    "for var in ['b', 'u', 'v', 'w', 'p']:\n",
     "    fs[var]['g']\n",
     "\n",
     "# b\n",
-    "axes = mfig.add_axes(0,0, [0,0,1,1])\n",
+    "axes = mfig.add_axes(0, 0, [0,0,1,1])\n",
     "plot_tools.plot_bot_2d(fs['b'], axes=axes)\n",
     "\n",
     "# u,w\n",
-    "axes = mfig.add_axes(1,0, [0,0,1,1])\n",
+    "axes = mfig.add_axes(1, 0, [0, 0, 1, 1])\n",
     "data_slices = (slice(None), slice(None))\n",
     "xx,zz = d_2d.grids()\n",
-    "xx,zz = np.meshgrid(xx,zz)\n",
-    "axes.quiver(xx[::2,::2],zz[::2,::2], fs['u']['g'][::2,::2].T, fs['w']['g'][::2,::2].T,zorder=10)\n",
+    "xx,zz = np.meshgrid(xx, zz)\n",
+    "axes.quiver(xx[::2, ::2], zz[::2, ::2], fs['u']['g'][::2, ::2].T, fs['w']['g'][::2, ::2].T, zorder=10)\n",
     "axes.set_xlabel('x')\n",
     "axes.set_ylabel('z')\n",
     "axes.set_title('u-w vectors')\n",
     "\n",
     "# v\n",
-    "axes = mfig.add_axes(2,0, [0,0,1,1])\n",
+    "axes = mfig.add_axes(2, 0, [0, 0, 1, 1])\n",
     "plot_tools.plot_bot_2d(fs['v'], axes=axes)\n",
     "\n",
     "# eta\n",
-    "axes = mfig.add_axes(3,0, [0,0,1,1])\n",
-    "axes.plot(xx[0,:],-fs['p']['g'][:,0])\n",
+    "axes = mfig.add_axes(3, 0, [0, 0, 1, 1])\n",
+    "axes.plot(xx[0, :], -fs['p']['g'][:, 0])\n",
     "axes.set_xlabel('x')\n",
     "axes.set_ylabel(r'$\\eta$')\n",
     "\n",
@@ -507,9 +507,9 @@
     "pax.collections[0].set_clim(0,0.2)\n",
     "cax.xaxis.set_ticks_position('top')\n",
     "cax.xaxis.set_label_position('top')\n",
-    "contours = np.linspace(0,0.2,20,endpoint=False)\n",
+    "contours = np.linspace(0, 0.2, 20, endpoint=False)\n",
     "pax.contour(cf.parameter_grids[0], cf.parameter_grids[1],cf.evalue_grid.real, levels=contours, colors='k')\n",
-    "pax.figure.savefig('mixed_layer_growth_rates.png',dpi=300)"
+    "pax.figure.savefig('mixed_layer_growth_rates.png', dpi=300)"
    ]
   },
   {
